# mdo-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: github-release.md
docs/superpowers/plans/: 2026-04-05-mdo-cli.md  2026-04-19-phase1-core-refactoring.md  2026-04-19-phase2a-flutter-foundation.md  2026-04-19-phase2b-screens.md  2026-04-20-phase2c-settings.md
docs/superpowers/specs/: 2026-04-05-mdo-cli-design.md  2026-04-19-flutter-integration-design.md
flutter/: .gitignore  README.md  pubspec.yaml
flutter/lib/: app.dart  main.dart
flutter/lib/engine/: mdo_engine.dart
flutter/lib/providers/: engine_provider.dart  letter_provider.dart  profile_provider.dart  settings_provider.dart
flutter/lib/screens/: home_screen.dart  letter_editor_screen.dart  letter_list_screen.dart  pdf_preview_screen.dart  profile_form_screen.dart  profile_list_screen.dart  settings_screen.dart
flutter/linux/: CMakeLists.txt
flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/linux/runner/: my_application.cc
flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter/macos/Runner/: DebugProfile.entitlements  Release.entitlements
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Assets.xcassets/AppIcon.appiconset/: AppIcon.icns
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/python/: main.py
flutter/test/: widget_test.dart
flutter/test/engine/: mdo_engine_test.dart
flutter/windows/: CMakeLists.txt
flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
flutter/windows/runner/: Runner.rc  main.cpp
logo/: mdo-logo.pbm
scripts/: build_dmg.sh  bundle_binaries.sh  package_app.sh  release.sh
src/mdo/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/mdo/commands/: compile.py  install_fonts.py  new.py  profile.py  update.py
src/mdo/core/: compiler.py  fonts.py  letter.py  markdown.py  models.py  paths.py  profile.py  server.py  template.py  typst_builder.py
tests/: conftest.py  test_compile.py  test_core_compiler.py  test_core_profile.py  test_core_template.py  test_fonts.py  test_letter.py  test_markdown.py  test_new.py  test_paths.py  test_profile.py  test_server.py  test_typst_builder.py  test_update.py
