[project]
name = "mdo-cli"
dynamic = ["version"]
description = "Generate DIN 5008 Form A business letters as PDF/A from Markdown"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "jcmx9", email = "jcmx9@tutamail.com"}]
dependencies = [
    "typer>=0.15",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
mdo = "mdo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/mdo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mdo"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
packages = ["mdo"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.14",
    "types-pyyaml>=6.0.12.20250915",
    "bump-my-version>=1.1",
]

[tool.bumpversion]
current_version = "26.4.25"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}.dev{dev}",
    "{major}.{minor}.{patch}",
]

[[tool.bumpversion.files]]
filename = "src/mdo/__init__.py"
